--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Lizenz prüfen [CHECK_LICENSE]</string>
     <string name="read_phone_state">Telefonstatus lesen [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Zugriffsbenachrichtigungsrichtlinie [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Radioinformationen anzeigen.</string>
     <string name="notifications">Benachrichtigungen</string>
     <string name="notification_settings">Benachrichtigungseinstellungen</string>
     <string name="notification_last_time_used_title">Es ist eine Weile her!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Verbindungszeitüberschreitung. ⚠️</string>
     <string name="snack_connection_error">Verbindungsfehler. ⚠️</string>
     <string name="snack_feedback">Vielen Dank, dass Sie uns bewertet haben!</string>
+    <string name="tooltip_start_scan">Starte den Scan.</string>
+    <string name="tooltip_network">Netzwerkinformationen.</string>
 </resources>
