--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,7 +14,7 @@
     <string name="server">Servidor</string>
     <string name="web_page">Página web</string>
     <string name="unknown">Desconocido</string>
-    <string name="ip_not_fount">Dirección IP no encontrada...</string>
+    <string name="ip_not_fount">Dirección IP no encontrada…</string>
     <string name="settings">Ajustes</string>
     <string name="appearance">Apariencia</string>
     <string name="theme">Tema</string>
@@ -26,7 +26,7 @@
     <string name="advanced">Avanzado</string>
     <string name="firebase">base de fuego</string>
     <string name="app_updates">actualizaciones de la aplicación</string>
-    <string name="check_for_updates">Buscar actualizaciones...</string>
+    <string name="check_for_updates">Buscar actualizaciones…</string>
     <string name="subscribe_to_beta">Suscríbete a las actualizaciones beta</string>
     <string name="changelog">registro de cambios</string>
     <string name="privacy_and_security">Privacidad y seguridad</string>
@@ -77,6 +77,7 @@
     <string name="check_license">Verificar licencia [CHECK_LICENSE]</string>
     <string name="read_phone_state">Leer el estado del teléfono [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Política de notificación de acceso [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Mostrar información de la radio.</string>
     <string name="notifications">Notificaciones</string>
     <string name="notification_settings">Configuración de las notificaciones</string>
     <string name="notification_last_time_used_title">¡Ha sido un tiempo!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">El tiempo de conexión expiro. ⚠️</string>
     <string name="snack_connection_error">Error de conexión. ⚠️</string>
     <string name="snack_feedback">¡Gracias por calificarnos!</string>
+    <string name="tooltip_start_scan">Iniciar escaneo.</string>
+    <string name="tooltip_network">Información de la red.</string>
 </resources>
