--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Vérifier la licence [CHECK_LICENSE]</string>
     <string name="read_phone_state">Lire l\'état du téléphone [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Politique de notification d\'accès [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Afficher les informations de la radio.</string>
     <string name="notifications">Avis</string>
     <string name="notification_settings">Paramètres de notification</string>
     <string name="notification_last_time_used_title">Cela fait longtemps!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Délai de connection dépassé. ⚠️</string>
     <string name="snack_connection_error">Erreur de connexion. ⚠️</string>
     <string name="snack_feedback">Merci de nous évaluer!</string>
+    <string name="tooltip_start_scan">Démarrer la numérisation.</string>
+    <string name="tooltip_network">Informations réseau.</string>
 </resources>
