--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">लाइसेंस जांचें [CHECK_LICENSE]</string>
     <string name="read_phone_state">फ़ोन स्थिति पढ़ें [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">पहुँच अधिसूचना नीति [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">रेडियो सूचना दिखाएं।</string>
     <string name="notifications">सूचनाएं</string>
     <string name="notification_settings">अधिसूचना सेटिंग्स</string>
     <string name="notification_last_time_used_title">इसे बीते एक अर्सा हो गया है!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">रिश्तों का समय बाहर। ⚠️</string>
     <string name="snack_connection_error">संपर्क त्रुटि। ⚠️</string>
     <string name="snack_feedback">हमें रेटिंग देने के लिए धन्यवाद!</string>
+    <string name="tooltip_start_scan">स्कैनिंग शुरू करें।</string>
+    <string name="tooltip_network">नेटवर्क जानकारी।</string>
 </resources>
