--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Licenc ellenőrzése [CHECK_LICENSE]</string>
     <string name="read_phone_state">Telefonállapot olvasása [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Hozzáférési értesítési szabályzat [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Rádióinformációk megjelenítése.</string>
     <string name="notifications">Értesítések</string>
     <string name="notification_settings">Értesítési beállítások</string>
     <string name="notification_last_time_used_title">Ez már egy ideje!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Kapcsolat időtúllépés. ⚠️</string>
     <string name="snack_connection_error">Kapcsolati hiba. ⚠️</string>
     <string name="snack_feedback">Köszönjük, hogy értékelt minket!</string>
+    <string name="tooltip_start_scan">Szkennelés indítása.</string>
+    <string name="tooltip_network">Hálózati információk.</string>
 </resources>
