--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Periksa lisensi [CHECK_LICENSE]</string>
     <string name="read_phone_state">Baca status ponsel [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Kebijakan pemberitahuan akses [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Tampilkan informasi radio.</string>
     <string name="notifications">Notifikasi</string>
     <string name="notification_settings">Pengaturan pemberitahuan</string>
     <string name="notification_last_time_used_title">Sudah lama!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Waktu koneksi habis. ⚠️</string>
     <string name="snack_connection_error">Koneksi error. ⚠️</string>
     <string name="snack_feedback">Terima kasih telah menilai kami!</string>
+    <string name="tooltip_start_scan">Mulai pemindaian.</string>
+    <string name="tooltip_network">Informasi jaringan.</string>
 </resources>
