--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Verifica licenza [CHECK_LICENSE]</string>
     <string name="read_phone_state">Leggi lo stato del telefono [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Criterio di notifica degli accessi [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Mostra informazioni sulla radio.</string>
     <string name="notifications">Notifiche</string>
     <string name="notification_settings">Impostazioni di notifica</string>
     <string name="notification_last_time_used_title">È passato un po \'di tempo!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Connesione finita. ⚠️</string>
     <string name="snack_connection_error">Errore di connessione. ⚠️</string>
     <string name="snack_feedback">Grazie per averci valutato!</string>
+    <string name="tooltip_start_scan">Avvia scansione.</string>
+    <string name="tooltip_network">Informazioni di rete.</string>
 </resources>
