--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">ライセンスを確認 [CHECK_LICENSE]</string>
     <string name="read_phone_state">電話の状態を読み取る [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">アクセス通知ポリシー [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">ラジオ情報を表示する。</string>
     <string name="notifications">通知</string>
     <string name="notification_settings">通知設定</string>
     <string name="notification_last_time_used_title">お久しぶりです！</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">接続タイムアウト。 ⚠️</string>
     <string name="snack_connection_error">接続エラー。 ⚠️</string>
     <string name="snack_feedback">評価していただきありがとうございます!</string>
+    <string name="tooltip_start_scan">スキャンを開始する。</string>
+    <string name="tooltip_network">ネットワーク情報。</string>
 </resources>
