--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Sprawdź licencję [CHECK_LICENSE]</string>
     <string name="read_phone_state">Przeczytaj stan telefonu [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Zasady powiadamiania o dostępie [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Pokaż informacje o radiu.</string>
     <string name="notifications">Powiadomienia</string>
     <string name="notification_settings">Ustawienia powiadomień</string>
     <string name="notification_last_time_used_title">Minęło trochę czasu!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Czas połączenia minął. ⚠️</string>
     <string name="snack_connection_error">Błąd połączenia. ⚠️</string>
     <string name="snack_feedback">Dziękujemy za ocenę nas!</string>
+    <string name="tooltip_start_scan">Rozpocznij skanowanie.</string>
+    <string name="tooltip_network">Informacje o sieci.</string>
 </resources>
