--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Verificați licența [CHECK_LICENSE]</string>
     <string name="read_phone_state">Citiți starea telefonului [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Politica privind notificările de acces [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Afișare informații radio.</string>
     <string name="notifications">Notificări</string>
     <string name="notification_settings">Setări de notificare</string>
     <string name="notification_last_time_used_title">A trecut ceva timp!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Timeout de conexiune. ⚠️</string>
     <string name="snack_connection_error">Eroare de conexiune. ⚠️</string>
     <string name="snack_feedback">Vă mulțumim că ne-ați evaluat!</string>
+    <string name="tooltip_start_scan">Începe scanarea.</string>
+    <string name="tooltip_network">Informații despre rețea.</string>
 </resources>
