--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Lisansı kontrol edin [CHECK_LICENSE]</string>
     <string name="read_phone_state">Telefon durumunu oku [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Erişim bildirimi politikası [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Radyo bilgisini göster.</string>
     <string name="notifications">Bildirimler</string>
     <string name="notification_settings">Bildirim ayarları</string>
     <string name="notification_last_time_used_title">Bir süre oldu!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Bağlantı zamanaşımı. ⚠️</string>
     <string name="snack_connection_error">Bağlantı hatası. ⚠️</string>
     <string name="snack_feedback">Bizi değerlendirdiğiniz için teşekkürler!</string>
+    <string name="tooltip_start_scan">Taramayı başlat.</string>
+    <string name="tooltip_network">Ağ bilgisi.</string>
 </resources>
