--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Перевірити ліцензію [CHECK_LICENSE]</string>
     <string name="read_phone_state">Читати стан телефону [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Політика сповіщень про доступ [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Показати інформацію про радіо.</string>
     <string name="notifications">Сповіщення</string>
     <string name="notification_settings">Налаштування сповіщень</string>
     <string name="notification_last_time_used_title">Пройшло багато часу!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Час очікування підключення. ⚠️</string>
     <string name="snack_connection_error">Помилка з\'єднання. ⚠️</string>
     <string name="snack_feedback">Дякуємо за оцінку!</string>
+    <string name="tooltip_start_scan">Почати сканування.</string>
+    <string name="tooltip_network">Інформація про мережу.</string>
 </resources>
