--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Check license [CHECK_LICENSE]</string>
     <string name="read_phone_state">Read phone state [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="content_description_radio">Show radio information.</string>
     <string name="notifications">Notifications</string>
     <string name="notification_settings">Notification settings</string>
     <string name="notification_last_time_used_title">It\'s been a while!</string>
@@ -119,4 +120,6 @@
     <string name="snack_connection_timeout">Connection timeout. ⚠️</string>
     <string name="snack_connection_error">Connection error. ⚠️</string>
     <string name="snack_feedback">Thanks for rating us!</string>
+    <string name="tooltip_start_scan">Start scanning.</string>
+    <string name="tooltip_network">Network information.</string>
 </resources>
