--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Проверка на лиценз [CHECK_LICENSE]</string>
     <string name="read_phone_state">Прочетете състоянието на телефона [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Правила за уведомяване за достъп [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Преден план [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Показване на радиоинформация.</string>
     <string name="notifications">Известия</string>
     <string name="notification_settings">Настройки за известията</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Позволява на приложението да чете състоянието на телефона, включително телефонния номер на устройството, текущата информация за клетъчната мрежа и състоянието на текущите повиквания, за да пренасочи потребителя към конкретна системна настройка, свързана с телефонна информация, осигурявайки достъп до допълнителни функционалност или опции за конфигурация.</string>
     <string name="summary_preference_permissions_check_license">Позволява на приложението да провери съответствието си с лицензионното споразумение и да наложи лицензионните условия за защита на интелектуалната собственост.</string>
     <string name="summary_preference_permissions_access_notification_policy">Позволява на приложението да осъществява достъп и да променя правилата за известяване на устройството, като контролира как и кога известията се показват на потребителя и предоставя персонализирани функции за управление на известията.</string>
+    <string name="summary_preference_permissions_foreground_service">Позволява на приложението да създава и използва услуги, които работят на преден план, като им предоставя приоритет пред други фонови процеси и подобрява производителността и надеждността.</string>
     <string name="summary_preference_settings_firebase">Това ни позволява да събираме информация за производителността на приложението и регистрационни файлове за сривове.</string>
     <string name="summary_preference_settings_support_me">Щракнете тук, ако искате да ме подкрепите, без да плащате пари. Само малко време за разглеждане на реклама.</string>
     <string name="summary_preference_settings_language">Задайте език на приложението.</string>
