--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Lizenz prüfen [CHECK_LICENSE]</string>
     <string name="read_phone_state">Telefonstatus lesen [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Zugriffsbenachrichtigungsrichtlinie [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Vordergrunddienst [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Radioinformationen anzeigen.</string>
     <string name="notifications">Benachrichtigungen</string>
     <string name="notification_settings">Benachrichtigungseinstellungen</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Ermöglicht der App, den Status des Telefons zu lesen, einschließlich der Telefonnummer des Geräts, aktuelle Mobilfunknetzinformationen und den Status laufender Anrufe, um den Benutzer zu einer bestimmten Systemeinstellung im Zusammenhang mit Telefoninformationen umzuleiten und Zugriff auf weitere Informationen zu ermöglichen Funktionalität oder Konfigurationsmöglichkeiten.</string>
     <string name="summary_preference_permissions_check_license">Ermöglicht der App, die Einhaltung der Lizenzvereinbarung zu überprüfen und Lizenzbedingungen durchzusetzen, um geistiges Eigentum zu schützen.</string>
     <string name="summary_preference_permissions_access_notification_policy">Ermöglicht der App, auf die Benachrichtigungsrichtlinie des Geräts zuzugreifen und diese zu ändern, zu steuern, wie und wann Benachrichtigungen dem Benutzer angezeigt werden, und benutzerdefinierte Funktionen zur Benachrichtigungsverwaltung bereitzustellen.</string>
+    <string name="summary_preference_permissions_foreground_service">Die App kann Dienste erstellen und verwenden, die im Vordergrund ausgeführt werden. Dadurch erhalten sie Vorrang vor anderen Hintergrundprozessen und die Leistung und Zuverlässigkeit werden verbessert.</string>
     <string name="summary_preference_settings_firebase">Dadurch können wir Informationen über die App-Leistung und Absturzprotokolle sammeln.</string>
     <string name="summary_preference_settings_support_me">Klicken Sie hier, wenn Sie mich unterstützen möchten, ohne Geld zu bezahlen. Nur etwas Zeit, um eine Anzeige anzusehen.</string>
     <string name="summary_preference_settings_language">Legen Sie die Anwendungssprache fest.</string>
