--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Verificar licencia [CHECK_LICENSE]</string>
     <string name="read_phone_state">Leer el estado del teléfono [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Política de notificación de acceso [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Servicio en primer plano [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Mostrar información de la radio.</string>
     <string name="notifications">Notificaciones</string>
     <string name="notification_settings">Configuración de las notificaciones</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Permite que la aplicación lea el estado del teléfono, incluido el número de teléfono del dispositivo, la información actual de la red celular y el estado de las llamadas en curso para redirigir al usuario a una configuración específica del sistema relacionada con la información del teléfono, brindando acceso a más opciones de funcionalidad o configuración.</string>
     <string name="summary_preference_permissions_check_license">Permite que la aplicación verifique su cumplimiento con el acuerdo de licencia y haga cumplir los términos de la licencia para proteger la propiedad intelectual.</string>
     <string name="summary_preference_permissions_access_notification_policy">Permite que la aplicación acceda a la política de notificación del dispositivo y la modifique, controlando cómo y cuándo se muestran las notificaciones al usuario y proporcionando funciones de administración de notificaciones personalizadas.</string>
+    <string name="summary_preference_permissions_foreground_service">Permite que la aplicación cree y utilice servicios que se ejecuten en primer plano, dándoles prioridad sobre otros procesos en segundo plano y mejorando el rendimiento y la fiabilidad.</string>
     <string name="summary_preference_settings_firebase">Esto nos permite recopilar información sobre el rendimiento de la aplicación y los registros de fallas.</string>
     <string name="summary_preference_settings_support_me">Haz click aquí si quieres apoyarme sin pagar dinero. Sólo un poco de tiempo para ver un anuncio.</string>
     <string name="summary_preference_settings_language">Establecer el idioma de la aplicación.</string>
