--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">लाइसेंस जांचें [CHECK_LICENSE]</string>
     <string name="read_phone_state">फ़ोन स्थिति पढ़ें [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">पहुँच अधिसूचना नीति [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">फोरग्राउंड सेवा [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">रेडियो सूचना दिखाएं।</string>
     <string name="notifications">सूचनाएं</string>
     <string name="notification_settings">अधिसूचना सेटिंग्स</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">एप्लिकेशन को फ़ोन की स्थिति पढ़ने देता है, जिसमें डिवाइस का फ़ोन नंबर, वर्तमान सेल्युलर नेटवर्क जानकारी और चल रही कॉल की स्थिति शामिल होती है, ताकि उपयोगकर्ता को फ़ोन जानकारी से संबंधित विशिष्ट सिस्टम सेटिंग पर रीडायरेक्ट किया जा सके, अतिरिक्त एक्सेस प्रदान की जा सके कार्यक्षमता या कॉन्फ़िगरेशन विकल्प।</string>
     <string name="summary_preference_permissions_check_license">ऐप को लाइसेंस समझौते के अनुपालन को सत्यापित करने और बौद्धिक संपदा की सुरक्षा के लिए लाइसेंसिंग शर्तों को लागू करने देता है।</string>
     <string name="summary_preference_permissions_access_notification_policy">ऐप को डिवाइस की अधिसूचना नीति तक पहुंचने और संशोधित करने की अनुमति देता है, यह नियंत्रित करता है कि उपयोगकर्ता को सूचनाएं कैसे और कब प्रदर्शित की जाती हैं और कस्टम अधिसूचना प्रबंधन सुविधाएं प्रदान करता है।</string>
+    <string name="summary_preference_permissions_foreground_service">ऐप को फॉरग्राउंड में चलने वाली सेवाओं को बनाने और उपयोग करने की अनुमति देता है, जो अन्य पृष्ठभूमि प्रक्रियाओं के मुकाबले प्राथमिकता देती हैं और प्रदर्शन और विश्वसनीयता में सुधार करती हैं।</string>
     <string name="summary_preference_settings_firebase">यह हमें ऐप के प्रदर्शन और क्रैश लॉग के बारे में जानकारी एकत्र करने देता है।</string>
     <string name="summary_preference_settings_support_me">अगर आप बिना पैसा दिए मेरा समर्थन करना चाहते हैं तो यहां क्लिक करें। विज्ञापन देखने के लिए बस कुछ समय।</string>
     <string name="summary_preference_settings_language">एप्लिकेशन भाषा सेट करें।</string>
