--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Licenc ellenőrzése [CHECK_LICENSE]</string>
     <string name="read_phone_state">Telefonállapot olvasása [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Hozzáférési értesítési szabályzat [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Előtérszolgáltatás [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Rádióinformációk megjelenítése.</string>
     <string name="notifications">Értesítések</string>
     <string name="notification_settings">Értesítési beállítások</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Lehetővé teszi az alkalmazás számára, hogy beolvassa a telefon állapotát, beleértve az eszköz telefonszámát, az aktuális mobilhálózat-információkat és a folyamatban lévő hívások állapotát, hogy a felhasználót a telefonadatokkal kapcsolatos meghatározott rendszerbeállításokhoz irányítsa át, hozzáférést biztosítva további szolgáltatásokhoz. funkciók vagy konfigurációs lehetőségek.</string>
     <string name="summary_preference_permissions_check_license">Lehetővé teszi az alkalmazás számára, hogy ellenőrizze, hogy megfelel-e a licencszerződésnek, és érvényesítse a licencfeltételeket a szellemi tulajdon védelme érdekében.</string>
     <string name="summary_preference_permissions_access_notification_policy">Lehetővé teszi az alkalmazás számára, hogy hozzáférjen és módosítsa az eszköz értesítési szabályzatát, szabályozva, hogyan és mikor jelenjenek meg az értesítések a felhasználó számára, és egyéni értesítéskezelési funkciókat biztosít.</string>
+    <string name="summary_preference_permissions_foreground_service">Az alkalmazás szolgáltatásokat hozhat létre és használhat, amelyek a foregroundben futnak, így prioritást élveznek a többi háttérfolyamathoz képest, és javítják a teljesítményt és a megbízhatóságot.</string>
     <string name="summary_preference_settings_firebase">Ezzel információkat gyűjthetünk az alkalmazások teljesítményéről és az összeomlási naplókról.</string>
     <string name="summary_preference_settings_support_me">Kattintson ide, ha pénzfizetés nélkül szeretne támogatni engem. Csak egy kis idő a hirdetés megtekintésére.</string>
     <string name="summary_preference_settings_language">Állítsa be az alkalmazás nyelvét.</string>
