--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Verifica licenza [CHECK_LICENSE]</string>
     <string name="read_phone_state">Leggi lo stato del telefono [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Criterio di notifica degli accessi [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Servizio in primo piano [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Mostra informazioni sulla radio.</string>
     <string name="notifications">Notifiche</string>
     <string name="notification_settings">Impostazioni di notifica</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Consente all\'app di leggere lo stato del telefono, inclusi il numero di telefono del dispositivo, le informazioni sulla rete cellulare corrente e lo stato delle chiamate in corso per reindirizzare l\'utente a un\'impostazione di sistema specifica relativa alle informazioni del telefono, fornendo accesso a ulteriori funzionalità o opzioni di configurazione.</string>
     <string name="summary_preference_permissions_check_license">Consente all\'app di verificare la sua conformità con il contratto di licenza e applicare i termini di licenza per proteggere la proprietà intellettuale.</string>
     <string name="summary_preference_permissions_access_notification_policy">Consente all\'app di accedere e modificare i criteri di notifica del dispositivo, controllando come e quando le notifiche vengono visualizzate all\'utente e fornendo funzionalità di gestione delle notifiche personalizzate.</string>
+    <string name="summary_preference_permissions_foreground_service">L\'app può creare e utilizzare servizi che vengono eseguiti in primo piano, dando loro la priorità rispetto ad altri processi in background e migliorando le prestazioni e l\'affidabilità.</string>
     <string name="summary_preference_settings_firebase">Questo ci consente di raccogliere informazioni sulle prestazioni dell\'app e sui registri degli arresti anomali.</string>
     <string name="summary_preference_settings_support_me">Clicca qui se vuoi sostenermi senza pagare soldi. Solo un po\' di tempo per visualizzare un annuncio.</string>
     <string name="summary_preference_settings_language">Imposta la lingua dell\'applicazione.</string>
