--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">ライセンスを確認 [CHECK_LICENSE]</string>
     <string name="read_phone_state">電話の状態を読み取る [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">アクセス通知ポリシー [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">フォアグラウンドサービス [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">ラジオ情報を表示する。</string>
     <string name="notifications">通知</string>
     <string name="notification_settings">通知設定</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">アプリが、デバイスの電話番号、現在の携帯ネットワーク情報、進行中の通話のステータスなどの電話の状態を読み取り、電話情報に関連する特定のシステム設定にユーザーをリダイレクトできるようにし、追加のアクセスを提供します。機能または構成オプション。</string>
     <string name="summary_preference_permissions_check_license">アプリがライセンス契約への準拠を確認し、知的財産を保護するためにライセンス条項を強制できるようにします。</string>
     <string name="summary_preference_permissions_access_notification_policy">アプリがデバイスの通知ポリシーにアクセスして変更できるようにし、通知をユーザーに表示する方法とタイミングを制御し、カスタム通知管理機能を提供します。</string>
+    <string name="summary_preference_permissions_foreground_service">アプリは前面で実行されるサービスを作成して使用できます。これにより、他のバックグラウンドプロセスよりも優先され、パフォーマンスと信頼性が向上します。</string>
     <string name="summary_preference_settings_firebase">これにより、アプリのパフォーマンスとクラッシュ ログに関する情報を収集できるようになります。</string>
     <string name="summary_preference_settings_support_me">お金を払わずに私をサポートしたい場合は、ここをクリックしてください。広告を見るための少しの時間です。</string>
     <string name="summary_preference_settings_language">アプリケーションの言語を設定します。</string>
