--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Verificați licența [CHECK_LICENSE]</string>
     <string name="read_phone_state">Citiți starea telefonului [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Politica privind notificările de acces [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Serviciu în prim-plan [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Afișare informații radio.</string>
     <string name="notifications">Notificări</string>
     <string name="notification_settings">Setări de notificare</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Permite aplicației să citească starea telefonului, inclusiv numărul de telefon al dispozitivului, informațiile actuale ale rețelei celulare și starea apelurilor în curs pentru a redirecționa utilizatorul către o anumită setare de sistem legată de informațiile telefonului, oferind acces la informații suplimentare. funcționalitate sau opțiuni de configurare.</string>
     <string name="summary_preference_permissions_check_license">Permite aplicației să verifice conformitatea cu acordul de licență și să aplice termenii de licență pentru a proteja proprietatea intelectuală.</string>
     <string name="summary_preference_permissions_access_notification_policy">Permite aplicației să acceseze și să modifice politica de notificare a dispozitivului, controlând cum și când notificările sunt afișate utilizatorului și oferind funcții personalizate de gestionare a notificărilor.</string>
+    <string name="summary_preference_permissions_foreground_service">Permite aplicației să creeze și să utilizeze servicii care rulează în prim-plan, oferind-le prioritate față de alte procese din fundal și îmbunătățind performanța și fiabilitatea.</string>
     <string name="summary_preference_settings_firebase">Acest lucru ne permite să colectăm informații despre performanța aplicației și jurnalele de blocări.</string>
     <string name="summary_preference_settings_support_me">Faceți clic aici dacă doriți să mă susțineți fără să plătiți bani. Doar puțin timp pentru a vizualiza un anunț.</string>
     <string name="summary_preference_settings_language">Setați limba aplicației.</string>
