--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -77,6 +77,7 @@
     <string name="check_license">Kontrollera licensen [CHECK_LICENSE]</string>
     <string name="read_phone_state">Läs telefonstatus [READ_PHONE_STATE]</string>
     <string name="access_notification_policy">Åtkomstmeddelandepolicy [ACCESS_NOTIFICATION_POLICY]</string>
+    <string name="foreground_service">Framgrundsprocess [FOREGROUND_SERVICE]</string>
     <string name="content_description_radio">Visa radiouppgifter.</string>
     <string name="notifications">Aviseringar</string>
     <string name="notification_settings">Aviseringsinställningar</string>
@@ -107,6 +108,7 @@
     <string name="summary_preference_permissions_read_phone_state">Tillåter att appen läser telefonens status, inklusive enhetens telefonnummer, aktuell mobilnätverksinformation och status för pågående samtal för att omdirigera användaren till en specifik systeminställning relaterad till telefoninformation, vilket ger åtkomst till ytterligare funktionalitet eller konfigurationsalternativ.</string>
     <string name="summary_preference_permissions_check_license">Tillåter att appen verifierar att den följer licensavtalet och tillämpar licensvillkor för att skydda immateriella rättigheter.</string>
     <string name="summary_preference_permissions_access_notification_policy">Tillåter appen att komma åt och ändra enhetens aviseringspolicy, kontrollera hur och när aviseringar visas för användaren och tillhandahålla anpassade aviseringshanteringsfunktioner.</string>
+    <string name="summary_preference_permissions_foreground_service">Tillåter appen att skapa och använda tjänster som körs i förgrunden, vilket ger en ökad synlighet och fortsatt körning även när appen inte är aktiv.</string>
     <string name="summary_preference_settings_firebase">Detta låter oss samla in information om appprestanda och kraschloggar.</string>
     <string name="summary_preference_settings_support_me">Klicka här om du vill stödja mig utan att betala pengar. Bara lite tid för att se en annons.</string>
     <string name="summary_preference_settings_language">Ställ in applikationsspråk.</string>
