--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -56,7 +56,6 @@
     <string name="faq">FAQ</string>
     <string name="send_feedback">Kirim umpan balik</string>
     <string name="about">Tentang</string>
-    <string name="open_me">Buka saya 🌐</string>
     <string name="app_version">Versi %1$s (%2$d)</string>
     <string name="music">Musik</string>
     <string name="made_in">Dibuat dengan ❤ di Rumania!</string>
@@ -122,6 +121,8 @@
     <string name="snack_connection_timeout">Waktu koneksi habis. ⚠️</string>
     <string name="snack_connection_error">Koneksi error. ⚠️</string>
     <string name="snack_feedback">Terima kasih telah menilai kami!</string>
+    <string name="tooltip_agree">Terima syarat dan ketentuan.</string>
     <string name="tooltip_start_scan">Mulai pemindaian.</string>
     <string name="tooltip_network">Informasi jaringan.</string>
+    <string name="tooltip_open_me">Buka saya 🌐</string>
 </resources>
