--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -56,7 +56,6 @@
     <string name="faq">FAQ</string>
     <string name="send_feedback">Feedback abschicken</string>
     <string name="about">Um</string>
-    <string name="open_me">Öffne mich 🌐</string>
     <string name="app_version">Version %1$s (%2$d)</string>
     <string name="music">Musik</string>
     <string name="made_in">Hergestellt mit ❤ in Rumänien!</string>
@@ -122,6 +121,8 @@
     <string name="snack_connection_timeout">Verbindungszeitüberschreitung. ⚠️</string>
     <string name="snack_connection_error">Verbindungsfehler. ⚠️</string>
     <string name="snack_feedback">Vielen Dank, dass Sie uns bewertet haben!</string>
+    <string name="tooltip_agree">Die Nutzungsbedingungen akzeptieren.</string>
     <string name="tooltip_start_scan">Starte den Scan.</string>
     <string name="tooltip_network">Netzwerkinformationen.</string>
+    <string name="tooltip_open_me">Öffne mich 🌐</string>
 </resources>
