--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -56,7 +56,6 @@
     <string name="faq">FAQ</string>
     <string name="send_feedback">Envoyer des commentaires</string>
     <string name="about">À propos</string>
-    <string name="open_me">Ouvre moi 🌐</string>
     <string name="app_version">Version%1$s (%2$d)</string>
     <string name="music">Musique</string>
     <string name="made_in">Fabriqué avec ❤ en Roumanie !</string>
@@ -122,6 +121,8 @@
     <string name="snack_connection_timeout">Délai de connection dépassé. ⚠️</string>
     <string name="snack_connection_error">Erreur de connexion. ⚠️</string>
     <string name="snack_feedback">Merci de nous évaluer!</string>
+    <string name="tooltip_agree">Accepter les termes et conditions.</string>
     <string name="tooltip_start_scan">Démarrer la numérisation.</string>
     <string name="tooltip_network">Informations réseau.</string>
+    <string name="tooltip_open_me">Ouvre moi 🌐</string>
 </resources>
