--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -56,7 +56,6 @@
     <string name="faq">सामान्य प्रश्न</string>
     <string name="send_feedback">प्रतिक्रिया भेजें</string>
     <string name="about">के बारे में</string>
-    <string name="open_me">मुझे खोलो 🌐</string>
     <string name="app_version">संस्करण %1$s (%2$d)</string>
     <string name="music">संगीत</string>
     <string name="made_in">रोमानिया में ❤ के साथ बनाया गया!</string>
@@ -122,6 +121,8 @@
     <string name="snack_connection_timeout">रिश्तों का समय बाहर। ⚠️</string>
     <string name="snack_connection_error">संपर्क त्रुटि। ⚠️</string>
     <string name="snack_feedback">हमें रेटिंग देने के लिए धन्यवाद!</string>
+    <string name="tooltip_agree">शर्तें और नियम स्वीकार करें।</string>
     <string name="tooltip_start_scan">स्कैनिंग शुरू करें।</string>
     <string name="tooltip_network">नेटवर्क जानकारी।</string>
+    <string name="tooltip_open_me">मुझे खोलो 🌐</string>
 </resources>
