--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -56,7 +56,6 @@
     <string name="faq">FAQ</string>
     <string name="send_feedback">Invia feedback</string>
     <string name="about">Di</string>
-    <string name="open_me">Aprimi 🌐</string>
     <string name="app_version">Versione %1$s (%2$d)</string>
     <string name="music">Musica</string>
     <string name="made_in">Fatto con ❤ in Romania!</string>
@@ -122,6 +121,8 @@
     <string name="snack_connection_timeout">Connesione finita. ⚠️</string>
     <string name="snack_connection_error">Errore di connessione. ⚠️</string>
     <string name="snack_feedback">Grazie per averci valutato!</string>
+    <string name="tooltip_agree">Accetta i termini e le condizioni.</string>
     <string name="tooltip_start_scan">Avvia scansione.</string>
     <string name="tooltip_network">Informazioni di rete.</string>
+    <string name="tooltip_open_me">Aprimi 🌐</string>
 </resources>
